[package]
name = "ding-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
tokio = {version="1.21.1",features=["full"]}
dingtalk = { git = "https://github.com/robberphex/dingtalk", branch = "next" }
